rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/RL_Assortment_Line__c.object-meta.xml
<CustomObject>
    <description>One record per style per assortment plan. Contains planned units, target units, merchandising attributes, and Sofia's curation fields. Synced from Anaplan.</description>
    <label>Assortment Line Item</label>
    <nameField>
        <label>Line Item Name</label>
        <type>AutoNumber</type>
        <displayFormat>AL-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Assortment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>