rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Anaplan_Material_ID__c.field-meta.xml
<CustomField>
    <fullName>Anaplan_Material_ID__c</fullName>
    <description>External key matching Anaplan material ID for upsert</description>
    <label>Anaplan Material ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>