rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Assortment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Plan__c</fullName>
    <description>Parent assortment plan (master-detail)</description>
    <label>Assortment Plan</label>
    <referenceTo>RL_Assortment_Plan__c</referenceTo><relationshipLabel>Assortment Plan</relationshipLabel><relationshipName>AssortmentLineItems</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead>
    <type>MasterDetail</type>
</CustomField>