rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Buyer_Note__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Note__c</fullName>
    <description>Free-text annotation added by the buyer during assortment review</description>
    <label>Buyer Annotation</label>
    <length>32768</length><visibleLines>5</visibleLines>
    <type>LongTextArea</type>
</CustomField>