rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Buyer_Status__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Status__c</fullName>
    <description>Buyer acceptance status for this style</description>
    <label>Buyer Review Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Pending Review</fullName>
        </value>
        <value>
            <fullName>Approved</fullName>
        </value>
        <value>
            <fullName>Flagged for Discussion</fullName>
        </value>
        <value>
            <fullName>Dropped</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>