rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Product subcategory within FOB</description>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>