rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Delivery_Window__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window__c</fullName>
    <description>Delivery window code e.g. DLV1-Aug DLV2-Oct</description>
    <label>Delivery Window</label>
    <length>30</length>
    <type>Text</type>
</CustomField>