rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Display_Sequence__c</fullName>
    <description>Sofia drag-and-drop display order. Set from Anaplan on first sync only. Subsequent syncs do not overwrite.</description>
    <label>Display Sequence</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>