rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Door_Count__c.field-meta.xml
<CustomField>
    <fullName>Door_Count__c</fullName>
    <description>Number of doors carrying this style</description>
    <label>Door Count</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>