rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost__c</fullName>
    <description>Total extended wholesale cost for this line item</description>
    <label>Extended Wholesale Cost</label>
    <formula>Planned_Units__c * Wholesale_Unit_Cost__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><precision>18</precision><scale>2</scale>
    <type>Currency</type>
</CustomField>