rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/FOB__c.field-meta.xml
<CustomField>
    <fullName>FOB__c</fullName>
    <description>FOB for display grouping in wedge views</description>
    <label>Family of Business</label>
    <length>50</length>
    <type>Text</type>
</CustomField>