rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Is_Hero_Override__c.field-meta.xml
<CustomField>
    <fullName>Is_Hero_Override__c</fullName>
    <description>Sales rep manually flagged as hero overriding Anaplan flag</description>
    <label>Hero Override (Sales Rep)</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>