rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Is_Hero_Style__c.field-meta.xml
<CustomField>
    <fullName>Is_Hero_Style__c</fullName>
    <description>Hero style flag as set by Anaplan planning rules</description>
    <label>Hero Style (Anaplan)</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>