rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>SF Product2 record for this style</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo><relationshipLabel>Product</relationshipLabel><relationshipName>AssortmentLines</relationshipName>
    <type>Lookup</type>
</CustomField>