rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Sales_Rep_Note__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Note__c</fullName>
    <description>Free-text annotation added by the sales rep (Sofia) during assortment curation</description>
    <label>Sales Rep Annotation</label>
    <length>32768</length><visibleLines>5</visibleLines>
    <type>LongTextArea</type>
</CustomField>