rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <description>RL internal style number e.g. RL-A1240 synced from Anaplan</description>
    <label>Style Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>