rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Target_Units__c.field-meta.xml
<CustomField>
    <fullName>Target_Units__c</fullName>
    <description>Account-level target units from Anaplan</description>
    <label>Target Units</label>
    <precision>18</precision><scale>0</scale>
    <type>Number</type>
</CustomField>