rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Account merchandising tier A=hero B=supporting C=basic</description>
    <label>Merchandising Tier</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>A</fullName>
        </value>
        <value>
            <fullName>B</fullName>
        </value>
        <value>
            <fullName>C</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>