rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Variance_Pct__c.field-meta.xml
<CustomField>
    <fullName>Variance_Pct__c</fullName>
    <description>Percentage variance against target</description>
    <label>Variance %</label>
    <formula>IF(Target_Units__c > 0, (Planned_Units__c - Target_Units__c) / Target_Units__c * 100, 0)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><precision>18</precision><scale>2</scale>
    <type>Percent</type>
</CustomField>