rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Variance_Units__c.field-meta.xml
<CustomField>
    <fullName>Variance_Units__c</fullName>
    <description>Difference between planned and target units</description>
    <label>Variance (Units)</label>
    <formula>Planned_Units__c - Target_Units__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><precision>18</precision><scale>2</scale>
    <type>Number</type>
</CustomField>