rl_assortment_pkg/force-app/main/default/objects/RL_Assortment_Line__c/fields/Wholesale_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Unit_Cost__c</fullName>
    <description>Unit wholesale cost sourced from SAP via Anaplan</description>
    <label>Wholesale Unit Cost</label>
    <precision>18</precision><scale>2</scale>
    <type>Currency</type>
</CustomField>